--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 	},
 	"dependencies": {
 		"axios": "^0.19.0",
+		"bootstrap": "^4.4.1",
+		"bootstrap-vue": "^2.3.0",
 		"vue": "^2.6.11"
 	},
 	"author": "",
