--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"bootstrap": "^4.4.1",
 		"bootstrap-vue": "^2.3.0",
 		"moment": "^2.24.0",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vueperslides": "^2.8.2"
 	},
 	"author": "",
 	"description": ""
