--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"axios": "^0.19.0",
 		"bootstrap": "^4.4.1",
 		"bootstrap-vue": "^2.3.0",
+		"lodash": "^4.17.15",
 		"moment": "^2.24.0",
 		"vue": "^2.6.11",
 		"vueperslides": "^2.8.2"
