--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-	"name": "tawkto-frontend-take-home",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"start": "webpack-dev-server --config webpack.config.js"
-	},
-	"devDependencies": {
-		"css-loader": "^3.4.1",
-		"node-sass": "^4.13.0",
-		"sass-loader": "^8.0.0",
-		"url-loader": "^3.0.0",
-		"vue-loader": "^15.8.3",
-		"vue-router": "^3.1.3",
-		"vue-style-loader": "^4.1.2",
-		"vue-template-compiler": "^2.6.11",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.10.1"
-	},
-	"dependencies": {
-		"axios": "^0.19.0",
-		"bootstrap": "^4.4.1",
-		"bootstrap-vue": "^2.3.0",
-		"lodash": "^4.17.15",
-		"moment": "^2.24.0",
-		"vue": "^2.6.11",
-		"vueperslides": "^2.8.2"
-	},
-	"author": "",
-	"description": ""
+  "name": "tawkto-frontend-take-home",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --config webpack.config.js",
+    "heroku-postbuild": "npm start"
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.1",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "url-loader": "^3.0.0",
+    "vue-loader": "^15.8.3",
+    "vue-router": "^3.1.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.3.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "vue": "^2.6.11",
+    "vueperslides": "^2.8.2"
+  },
+  "author": "",
+  "description": ""
 }
