removed heroku postbuild

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js",
-    "heroku-postbuild": "npm start"
+    "start": "webpack-dev-server --config webpack.config.js"
   },
   "devDependencies": {
     "css-loader": "^3.4.1",
